# barcode

./: .gitignore  Cargo.toml  LICENSE  pseudo_fq.py  run.sh  whitelist.tsv
src/: lib.rs  main.rs
tests/: cli.rs
