[package]
name = "barcode"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "barcode_cli"
path = "src/main.rs"

[lib]
name = "barcode"
path = "src/lib.rs"

[dependencies]
structopt = "0.3.13"
anyhow = "1.0"
log = "0.4"
simplelog = "^0.10.0"
regex = "1.5.0"
itertools = "0.7.8"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"